syntax = "proto3";
import "AuthClient.proto";
import "Gps.proto";
import "google/protobuf/empty.proto";


service CommonService {

  rpc onAuthNotify (Auth) returns (AuthResult);

  rpc onGpsUpdate(google.protobuf.Empty) returns (stream GpsParameters);

}
