syntax = "proto3";

message GpsParameters{
  repeated GpsParameter gpsData = 1;
}

message GpsParameter {
  int32 long = 1;
  int32 lat = 2;
  int32 height = 3;
}

message onNotifyGps {

}
